@@ -78,6 +78,6 @@ int urj_tap_parport_set_control (urj_parport_t *port, const unsigned char data);
 
 const char *urj_cable_parport_devtype_string(urj_cable_parport_devtype_t dt);
 
-extern const urj_parport_driver_t *urj_tap_parport_drivers[];
+extern const urj_parport_driver_t * const urj_tap_parport_drivers[];
 
 #endif /* URJ_PARPORT_H */
